# four-souls-multiverse-engine

./: LICENSE  README.md  pyproject.toml
docs/: ABILITY_RESOLUTION.md  CARD_SCHEMA.md  COMMAND_SYSTEM.md  CONDITION_REGISTRY.md  CONTENT_PIPELINE.md  DEVELOPMENT_GUIDELINES.md  EFFECT_DSL.md  EFFECT_DSL_SPEC.md  EFFECT_REGISTRY.md  ENGINE_API.md  ENGINE_EXECUTION_MODEL.md  ENGINE_INVARIANTS.md  ENGINE_SPEC.md  EVENT_SYSTEM.md  GAME_STATE.md  OFFICIAL_CARD_COVERAGE.md  REPLAY_SYSTEM.md  RNG.md  SAVE_SYSTEM.md  STACK.md  TARGET_REGISTRY.md  TRIGGER_REGISTRY.md
spec/: RULES_SPEC.md
src/fsme/cards/: __init__.py  card.py  constants.py  context.py  dispatcher.py  errors.py  handler.py  resolver.py  result.py  types.py  utils.py
src/fsme/commands/: __init__.py  base.py  bus.py  constants.py  context.py  dispatcher.py  errors.py  handler.py  queue.py  result.py  types.py  utils.py
src/fsme/config/: __init__.py  config.py  constants.py  context.py  dispatcher.py  errors.py  handler.py  resolver.py  result.py  utils.py
src/fsme/content/: __init__.py  constants.py  context.py  dispatcher.py  errors.py  handler.py  loader.py  registry.py  resolver.py  result.py  utils.py
src/fsme/database/: database.py
src/fsme/effects/: __init__.py  constants.py  context.py  dispatcher.py  effect.py  errors.py  handler.py  resolver.py  result.py  utils.py
src/fsme/events/: __init__.py  bus.py  constants.py  context.py  dispatcher.py  errors.py  event.py  filter.py  listener.py  priority.py  queue.py  result.py  subscription.py  types.py  utils.py
src/fsme/game/: __init__.py  game.py  (+8 more)
(+71 files in other folders)
